@@ -37,6 +37,7 @@
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Management" />
+        <Reference Include="System.ServiceProcess" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
